# dorito

./: README.md  deploy.sh  docker-compose.yml
.github/workflows/: ci.yml
data_source/: Dockerfile
data_source/src/consumer/: main.py  processor.py  utils.py
data_source/src/producer/: main.py  reddit.py
data_source/src/shared/: io.py  types.py  utils.py
infra/: package-lock.json  package.json
infra/lib/: cdk-stack.ts
ingestion/: .gitignore  build.zsh  check.zsh  docker-compose.yml  pyproject.toml
ingestion/src/consumer/: __init__.py  main.py  processor.py  utils.py
ingestion/src/producer/: main.py  reddit.py
ingestion/src/shared/: io.py  types.py  utils.py
producer/: Dockerfile  build.zsh  dev.zsh  main.py  pyproject.toml  test_subredditFacade.py
producer/src/producer/: main.py  queue.py  reddit.py  utils.py
producer/tests/: test_outputAdapter.py  test_subredditFacade.py
