[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.11",
    "dataclasses-json>=0.6.7",
    "praw>=7.8.1",
    "torch>=2.8.0",
    "transformers>=4.55.4",
]

[project.scripts]
producer = "producer.main:main"
consumer = "consumer.main:main"

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"

