[project]
name = "producer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.11",
    "praw>=7.8.1",
]

[dependency-groups]
dev = [
    "coverage>=7.10.4",
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.9",
]
